--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -243,6 +243,7 @@
                                         </Grid>
                                         <StackPanel Orientation="Horizontal" Spacing="5" Margin="0,10,0,0">
                                             <Button x:Name="SaveFilterButton" Content="Save" Click="SaveFilterButton_Click"/>
+                                            <Button x:Name="PreviewFilterButton" Content="Preview" Click="PreviewFilterButton_Click"/>
                                             <Button x:Name="DeleteFilterButton" Content="Delete" Click="DeleteFilterButton_Click" IsEnabled="False"/>
                                             <Button x:Name="ClearFilterButton" Content="Clear" Click="ClearFilterButton_Click"/>
                                         </StackPanel>
