--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -231,7 +231,10 @@
                                     <StackPanel Grid.Column="1" Spacing="8">
                                         <TextBlock Text="Color picker"/>
                                         <ColorPicker x:Name="ColorMapPicker" ColorSpectrumShape="Ring" IsAlphaEnabled="False" ColorChanged="ColorMapPicker_ColorChanged"/>
-                                        <Button x:Name="PreviewColorMapButton" Content="Preview" Click="PreviewColorMapButton_Click"/>
+                                        <StackPanel Orientation="Horizontal" Spacing="8">
+                                            <Button x:Name="PreviewColorMapButton" Content="Preview" Click="PreviewColorMapButton_Click"/>
+                                            <Button x:Name="ColorMapSampleButton" Content="Sample" Click="ColorMapSampleButton_Click"/>
+                                        </StackPanel>
                                     </StackPanel>
                                 </Grid>
                             </Expander>
