--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -197,55 +197,12 @@
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="auto"/>
                                         </Grid.ColumnDefinitions>
-                                        <ComboBox x:Name="SavedFiltersComboBox" Grid.Column="0" HorizontalAlignment="Stretch" SelectionChanged="SavedFiltersComboBox_SelectionChanged"/>
+                                        <ComboBox x:Name="SavedFiltersComboBox" Grid.Column="0" HorizontalAlignment="Stretch" SelectionChanged="SavedFiltersComboBox_SelectionChanged" IsEditable="True" PlaceholderText="Filter name"/>
                                         <Button x:Name="AddNewFilterButton" Grid.Column="1" Content="Add" Click="AddNewFilterButton_Click" HorizontalAlignment="Right" VerticalAlignment="Center"/>
                                     </Grid>
                                     <!-- Editor panel -->
                                     <StackPanel x:Name="FilterEditorPanel" Spacing="5" Visibility="Collapsed">
-                                        <TextBlock Text="Filter Name"/>
-                                        <TextBox x:Name="FilterNameTextBox"/>
-                                        <Grid Margin="0,10,0,0">
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="60"/>
-                                                <ColumnDefinition Width="60"/>
-                                                <ColumnDefinition Width="60"/>
-                                                <ColumnDefinition Width="60"/>
-                                                <ColumnDefinition Width="60"/>
-                                            </Grid.ColumnDefinitions>
-                                            <TextBlock Grid.Column="0" Text="R" HorizontalAlignment="Center"/>
-                                            <TextBlock Grid.Column="1" Text="G" HorizontalAlignment="Center"/>
-                                            <TextBlock Grid.Column="2" Text="B" HorizontalAlignment="Center"/>
-                                            <TextBlock Grid.Column="3" Text="A" HorizontalAlignment="Center"/>
-                                        </Grid>
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="Auto"/>
-                                                <ColumnDefinition Width="*"/>
-                                            </Grid.ColumnDefinitions>
-                                            <StackPanel Grid.Column="0" Spacing="5" Margin="0,0,5,0">
-                                                <TextBlock Text="Red" Height="32" VerticalAlignment="Center"/>
-                                                <TextBlock Text="Green" Height="32" VerticalAlignment="Center"/>
-                                                <TextBlock Text="Blue" Height="32" VerticalAlignment="Center"/>
-                                                <TextBlock Text="Alpha" Height="32" VerticalAlignment="Center"/>
-                                                <TextBlock Text="Offset" Height="32" VerticalAlignment="Center"/>
-                                            </StackPanel>
-                                            <Grid x:Name="FilterMatrixGrid" Grid.Column="1" ColumnSpacing="5" RowSpacing="5" Visibility="Collapsed">
-                                                <Grid.RowDefinitions>
-                                                    <RowDefinition Height="Auto"/>
-                                                    <RowDefinition Height="Auto"/>
-                                                    <RowDefinition Height="Auto"/>
-                                                    <RowDefinition Height="Auto"/>
-                                                    <RowDefinition Height="Auto"/>
-                                                </Grid.RowDefinitions>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="60"/>
-                                                    <ColumnDefinition Width="60"/>
-                                                    <ColumnDefinition Width="60"/>
-                                                    <ColumnDefinition Width="60"/>
-                                                    <ColumnDefinition Width="60"/>
-                                                </Grid.ColumnDefinitions>
-                                            </Grid>
-                                        </Grid>
+                                        <!-- Advanced matrix moved to SimpleFilterPanel to share space with sliders -->
                                         <!-- Simple Mode Controls -->
                                         <StackPanel x:Name="SimpleFilterPanel" Spacing="8" Margin="0,10,0,0">
                                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="8">
@@ -264,6 +221,38 @@
                                                 <Slider x:Name="TemperatureSlider" Minimum="-1" Maximum="1" StepFrequency="0.01" ValueChanged="TemperatureSlider_ValueChanged"/>
                                                 <TextBlock Text="Tint"/>
                                                 <Slider x:Name="TintSlider" Minimum="-1" Maximum="1" StepFrequency="0.01" ValueChanged="TintSlider_ValueChanged"/>
+                                            </StackPanel>
+                                            <!-- Advanced matrix panel: shown when Advanced toggle is on -->
+                                            <StackPanel x:Name="AdvancedMatrixPanel" Spacing="0" Visibility="Collapsed">
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="Auto"/>
+                                                        <ColumnDefinition Width="*"/>
+                                                    </Grid.ColumnDefinitions>
+                                                    <StackPanel Grid.Column="0" Spacing="5" Margin="0,0,5,0">
+                                                        <TextBlock Text="Red" Height="32" VerticalAlignment="Center"/>
+                                                        <TextBlock Text="Green" Height="32" VerticalAlignment="Center"/>
+                                                        <TextBlock Text="Blue" Height="32" VerticalAlignment="Center"/>
+                                                        <TextBlock Text="Alpha" Height="32" VerticalAlignment="Center"/>
+                                                        <TextBlock Text="Offset" Height="32" VerticalAlignment="Center"/>
+                                                    </StackPanel>
+                                                    <Grid x:Name="FilterMatrixGrid" Grid.Column="1" ColumnSpacing="5" RowSpacing="5">
+                                                        <Grid.RowDefinitions>
+                                                            <RowDefinition Height="Auto"/>
+                                                            <RowDefinition Height="Auto"/>
+                                                            <RowDefinition Height="Auto"/>
+                                                            <RowDefinition Height="Auto"/>
+                                                            <RowDefinition Height="Auto"/>
+                                                        </Grid.RowDefinitions>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="60"/>
+                                                            <ColumnDefinition Width="60"/>
+                                                            <ColumnDefinition Width="60"/>
+                                                            <ColumnDefinition Width="60"/>
+                                                            <ColumnDefinition Width="60"/>
+                                                        </Grid.ColumnDefinitions>
+                                                    </Grid>
+                                                </Grid>
                                             </StackPanel>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Spacing="5" Margin="0,10,0,0">
