--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -256,7 +256,7 @@
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Spacing="5" Margin="0,10,0,0">
                                             <Button x:Name="SaveFilterButton" Content="Save" Click="SaveFilterButton_Click"/>
-                                            <Button x:Name="PreviewFilterButton" Content="Preview" Click="PreviewFilterButton_Click"/>
+                                            <ToggleButton x:Name="PreviewFilterToggle" Content="Preview" Checked="PreviewFilterToggle_Checked" Unchecked="PreviewFilterToggle_Unchecked"/>
                                             <Button x:Name="ApplyFilterButton" Content="Apply" Click="ApplyFilterButton_Click"/>
                                             <Button x:Name="DeleteFilterButton" Content="Delete" Click="DeleteFilterButton_Click" IsEnabled="False"/>
                                             <Button x:Name="ClearFilterButton" Content="Clear" Click="ClearFilterButton_Click"/>
