--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -198,7 +198,7 @@
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="auto"/>
                                         </Grid.ColumnDefinitions>
-                                        <ComboBox x:Name="SavedFiltersComboBox" Grid.Column="0" HorizontalAlignment="Stretch" SelectionChanged="SavedFiltersComboBox_SelectionChanged" IsEditable="True" PlaceholderText="Filter name"/>
+                                        <ComboBox x:Name="SavedFiltersComboBox" Grid.Column="0" HorizontalAlignment="Stretch" SelectionChanged="SavedFiltersComboBox_SelectionChanged" IsEditable="True" PlaceholderText="Filter name" KeyDown="EnterKeyCommit_Unfocus"/>
                                     </Grid>
                                     <!-- Editor panel -->
                                     <StackPanel x:Name="FilterEditorPanel" Spacing="5" Visibility="Visible">
@@ -258,7 +258,6 @@
                                         <StackPanel Orientation="Horizontal" Spacing="5" Margin="0,10,0,0">
                                             <Button x:Name="SaveFilterButton" Content="Save" Click="SaveFilterButton_Click"/>
                                             <ToggleButton x:Name="PreviewFilterToggle" Content="Preview" Checked="PreviewFilterToggle_Checked" Unchecked="PreviewFilterToggle_Unchecked"/>
-                                            <Button x:Name="ApplyFilterButton" Content="Apply" Click="ApplyFilterButton_Click"/>
                                             <Button x:Name="DeleteFilterButton" Content="Delete" Click="DeleteFilterButton_Click" IsEnabled="False"/>
                                             <Button x:Name="ClearFilterButton" Content="Clear" Click="ClearFilterButton_Click"/>
                                         </StackPanel>
