--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -310,7 +310,9 @@
                                             <TextBlock Grid.Column="5" Text=""/>
                                         </Grid>
 
-                                        <StackPanel x:Name="ColorMapListPanel" Spacing="6"/>
+                                        <ScrollViewer x:Name="ColorMapListScroll" VerticalScrollBarVisibility="Auto" Height="Auto" MaxHeight="460">
+                                            <StackPanel x:Name="ColorMapListPanel" Spacing="6"/>
+                                        </ScrollViewer>
                                     </StackPanel>
 
                                     <!-- Right: shared color picker for swatches -->
@@ -318,7 +320,7 @@
                                         <TextBlock Text="Color picker"/>
                                         <ColorPicker x:Name="ColorMapPicker" ColorSpectrumShape="Ring" IsAlphaEnabled="False" ColorChanged="ColorMapPicker_ColorChanged"/>
                                         <StackPanel Orientation="Horizontal" Spacing="8">
-                                            <Button x:Name="PreviewColorMapButton" Content="Preview" Click="PreviewColorMapButton_Click"/>
+                                            <ToggleButton x:Name="PreviewColorMapToggle" Content="Preview" Checked="PreviewColorMapToggle_Checked" Unchecked="PreviewColorMapToggle_Unchecked"/>
                                             <Button x:Name="ColorMapSampleButton" Content="Sample" Click="ColorMapSampleButton_Click"/>
                                         </StackPanel>
                                     </StackPanel>
